# scrapscope

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
src/: efficientnetv2b2.keras  inceptionv3.keras  mobilenetv2.keras  predict.py  resnet50.keras  server.py  train.py  training.ipynb
